--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+
+img{
+    width: 500px;
+    height:300px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/* .footer{
+    color: #524bd1;
+    font-weight: bold;
+    font-size: 25px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+    font-family: 'Anton', sans-serif;
+} */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media only screen and (max-width: 600px) {
+    /* img {
+        width: 100%;
+        height:100%;
+        margin-bottom: -50px;
+        margin-top: 0px;
+    } */
+    .footer{
+        color: #524bd1;
+        font-weight: bold;
+        font-size: 15px;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 40px;
+        font-family: 'Anton', sans-serif;
+    }
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* .container{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+} */
